--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@ body {
     /*vertical-align: baseline;*/
     line-height: 1;
     height: 100vh;
-    margin-top: 4em;
-    background-color: #E8F3D6;
+    background-color: lightgray;
 }
 .skip a {
     position: absolute;
@@ -94,49 +93,331 @@ header h2{
     border-radius: 50px;
     box-shadow: 10px 10px 20px rgb(0 0 0 / 40%), inset 0px 0px 25px rgb(0 0 0 / 30%);
 }
-div{
+
+/*accordion code*/
+html,body{
+    width: 100%;
+    height: 100%;
+  }
+
+  .container{
+    padding: 75px 0;
+    margin: 0 auto;
+    width: 1140px;
+  }
+
+  h1{
+    position: relative;
+    margin-bottom: 45px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 44px;
+    text-transform: uppercase;
+    color: #424242;
+  }
+
+  .gallery-wrap {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 70vh;
+  }
+
+  .item {
+    flex: 1;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: none;
+    transition: flex 0.8s ease;
+
+    &:hover{
+      flex: 7;
+    }
+  }
+
+  .item-1 {
+    background-image: url('https://images.unsplash.com/photo-1552423314-cf29ab68ad73?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  }
+
+  .item-2 {
+    background-image: url('https://images.unsplash.com/photo-1513072064285-240f87fa81e8?q=80&w=2727&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  }
+
+  .item-3 {
+    background-image: url('https://images.unsplash.com/photo-1575225863277-3a490de4e694?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  }
+
+  .item-4 {
+    background-image: url('https://i.pinimg.com/564x/0b/2c/3b/0b2c3bbe63282e5f012ba2e6d7b4aecc.jpg');
+  }
+
+  .item-5 {
+    background-image: url('https://i.pinimg.com/564x/50/34/7a/50347a48a92401a19a83f8be111354de.jpg');
+  }
+
+  .item-6{
+    background-image: url('https://i.pinimg.com/564x/a9/f5/94/a9f594e99a5740a4bc17cb5ab0bcde1d.jpg');
+  }
+  .item-7{
+    background-image: url('https://i.pinimg.com/564x/50/67/c7/5067c73ec741194c52c19e085da8490b.jpg');
+  }
+  .item-8{
+    background-image: url('https://i.pinimg.com/736x/49/1d/7e/491d7e06a4d7b3d2c0a8161cf67902b8.jpg');
+  }
+  .item-9{
+    background-image: url('https://i.pinimg.com/564x/3e/7e/5a/3e7e5a66a25866af4dd43bf243b5b9c0.jpg');
+  }
+  .item-10{
+    background-image: url('https://i.pinimg.com/736x/40/03/29/4003292c2b0e220dfd4e2952ff7bfc9b.jpg');
+  }
+
+/*Navigation bar*/
+  .topnav {
+    overflow: hidden;
+    background-color: #726257;
+    display: flex;
+  }
+
+  .topnav a {
+    float: left;
+    color: #fff;
+    text-align: center;
+    padding: 14px 40px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: Georgia;
+  }
+
+  .topnav a:hover {
+    background-color: #4a3c34;
+    color: #fff;
+  }
+
+  .topnav a .active {
+    background-color: #726257;
+    color: #fff;
+  }
+
+nav {
     margin: 0;
     padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    /*vertical-align: baseline;*/
-    background: transparent;
-    display: block;
 }
 
-nav li.active{
-    background-color: aquamarine;
-    border: 2px solid white;
+/*background code*/
+.container-fluid{
+    background-image: url("https://img.freepik.com/free-photo/abstract-brown-gradient-well-used-as-background-product-display_1258-57687.jpg?w=1800&t=st=1713891033~exp=1713891633~hmac=2181b83275c9a1cce94e798005c50e264ba5bf3108208290684c96aa3b0864fb");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+ }
+
+ /*mobile*/
+ @media only screen and (max-width: 768px) {
+
+    .topnav {
+        display: block;
+        text-align: center;
+    }
+    .topnav a {
+        display: block;
+        padding: 10px 0;
+    }
+    .skip {
+        display: block;
+        text-align: center;
+    }
+    header {
+        text-align: center;
+    }
+    h1 {
+        font-size: 24px;
+    }
 }
-nav li {
-    padding: 10px;
-    width: 100px;
-    box-sizing: border-box;
-    background-color: #F3FBEF;
-    border-radius: 7px;
-    border: 2px solid #4D543B;
-    margin: 3px;
-    box-shadow: 2px 2px 5px #4D543B, inset 0px 0px 7px rgba(0, 0, 0, 0.3);
+/*bts video*/
+.video{
+	display: block;
+	width: 90%;
+	border: 2px solid black;
+	margin: 0 auto;
 }
-li {
-    display: list-item;
-    text-align: -webkit-match-parent;
+
+<!--------------bts.html------------------------->
+figure{
+  position: relative;
+	padding-top: 25px;
+	height: 0;
+	text-align: center;
+	margin: 0 auto;
+	width: 566px;
 }
-nav ul {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-right: 30px;
+
+#myVideo,
+.thumbs {
+	width: 70%;
+	height: 70%;
+	outline: none;
+  align-content: center;
 }
-ul{
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
+
+.thumb {
+	width: 23%;
+	display: inline-table;
+	border: 1px solid #919191;
+	text-transform: uppercase;
+	line-height: 50px;
+	background-size: 100% auto;
+	cursor: pointer;
+	font-size: 80%;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 5px;
 }
-nav{
-    display: flex;
-    justify-content: end;
+.thumb:hover {
+  background-color: #e0e0e0;
+}
+
+@media only screen and (max-width: 600px) {
+	#videoHolder {
+		width: calc(100% - 20px);
+		margin: 0 10px;
+	}
+	#myVideo,
+	.thumbs {
+		width: 100%;
+		height: auto;
+	}
+}
+<!---------------bts.html------------------------>
+.video {
+  position: relative;
+}
+
+.controls {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.control-btn {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.control-btn:hover {
+  background-color: #e0e0e0;
+}
+
+#seekBar {
+  width: 62%;
+  margin-top: 5px;
+}
+
+#seekBar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+nav .active {
+  background-color: #435A3A;
+  color: #fff;
+}
+.thumb.active {
+  background-color: #65395C!important;
+  color: #fff !important;
+}
+<!--------------------------coofeee.html------------->
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+.grid-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; /* Allow items to wrap onto the next line */
+  gap: 20px; /* Adjust gap between grid items */
+  padding: 20px; /* Adjust padding around the grid */
+}
+
+
+.flip-box{
+	width: 330px;
+	height: 420px;
+	border-radius: 4px;
+	box-shadow: 0px 4px 16px #111;
+	cursor: pointer;
+	perspective: 1000px;
+  padding: 8px;
+}
+.flip-box-inner{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	transform-style: preserve-3d;
+	transition: transform 0.8s;
+  display: flex;
+  justify-content: center; /* Horizontal centering */
+  align-items: center; /* Vertical centering */
+}
+.flip-box-inner img{
+	border-radius: 4px;
+	width: 300px;
+	height: 400px;
+  border-radius: 4px;
+  max-width: 100%; /* Ensure the image doesn't exceed the container width */
+  max-height: 100%; /* Ensure the image doesn't exceed the container height */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.flip-box-front, .flip-box-back{
+	position: absolute;
+	width: 330px;
+	height: 420px;
+	backface-visibility: hidden;
+	border-radius: 4px;
+}
+.flip-box:hover .flip-box-inner{
+	transform: rotateY(180deg);
+}
+.flip-box-back{
+	width: 330px;
+	height: 420px;
+	background-color: #4A5759;
+	color: white;
+	transform: rotateY(180deg);
+  flex-direction: column; /* Align content vertically */
+  justify-content: center; /* Center content vertically */
+  align-items: center;
+  text-align: center;
+/*   padding-top: 20px; */
+
+}
+
+.flip-box-back p{
+	margin: 6px 12px;
+	font-size: 16px;
+	line-height: 1.6;
+  font-weight: 500;
+	letter-spacing: 0.1;
 }
