--- a/css/style.css
+++ b/css/style.css
@@ -421,3 +421,9 @@ nav .active {
   font-weight: 500;
 	letter-spacing: 0.1;
 }
+.container h3{
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  letter-spacing: 0.1em;
+  line-height: 1.5;
+}
