--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ nav {
 
 /*background code*/
 .container-fluid{
-    background-image: url("https://img.freepik.com/free-photo/abstract-brown-gradient-well-used-as-background-product-display_1258-57687.jpg?w=1800&t=st=1713891033~exp=1713891633~hmac=2181b83275c9a1cce94e798005c50e264ba5bf3108208290684c96aa3b0864fb");
+    background-image: url("https://images.unsplash.com/photo-1531685250784-7569952593d2?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
