--- a/css/style.css
+++ b/css/style.css
@@ -351,9 +351,9 @@ nav .active {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap; /* Allow items to wrap onto the next line */
-  gap: 20px; /* Adjust gap between grid items */
-  padding: 20px; /* Adjust padding around the grid */
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
 }
 
 
@@ -374,16 +374,16 @@ nav .active {
 	transform-style: preserve-3d;
 	transition: transform 0.8s;
   display: flex;
-  justify-content: center; /* Horizontal centering */
-  align-items: center; /* Vertical centering */
+  justify-content: center;
+  align-items: center;
 }
 .flip-box-inner img{
 	border-radius: 4px;
 	width: 300px;
 	height: 400px;
   border-radius: 4px;
-  max-width: 100%; /* Ensure the image doesn't exceed the container width */
-  max-height: 100%; /* Ensure the image doesn't exceed the container height */
+  max-width: 100%;
+  max-height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
